[package]
name = "clarity"
version = "0.5.1"
authors = ["Michał Papierski <michal@papierski.net>, Justin Kilpatrick <justin@althea.net>"]
autotests = true
include = [
    "**/*.rs",
    "Cargo.toml"
]
description = "Lightweight Ethereum client"
repository = "https://github.com/althea-net/clarity"
license-file = "LICENSE"
edition = "2021"

[badges]
travis-ci = { repository = "althea-net/clarity", branch = "master" }

[dependencies]
secp256k1 = { version = "0.21", features = ["recovery"] }
serde = "1.0"
serde-rlp = "0.1"
serde_bytes = "0.11"
serde_derive = "1.0"
sha3 = "0.10"
u64_array_bigints = { path = "../u64_array_bigints/u64_array_bigints", default-features = false }
#u64_array_bigints = { git = "https://github.com/AaronKutch/u64_array_bigints.git", rev = "9cb975474e45e4693af713b39e4575294b403c34", default-features = false }

[[test]]
name = "transaction_tests"
harness = false

[dev-dependencies]
criterion = "0.3"
futures = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
rustc-test = "0.3.0"
serde_json = "1.0"
web3 = "0.6"

[[bench]]
name = "crypto_bench"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
incremental = false
